Remove LotR-specific tests and fixed all the tests that are still in the code so they work